--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<a style="font-size:24pt">A website of academic research on tensor network</a><p>
-This website is under construction.<br>
+<p style="font-size:32px">A website of academic research on tensor network</p>
+<p style="font-size:20px">This website is under construction.</p>
 </body>
 </html>
